Fixed scrolling on mobile

--- a/src/main.css
+++ b/src/main.css
@@ -3,7 +3,7 @@ div.container{
     height: 1000px;
     margin: 0 auto;
     display: inline-block;
-    
+    touch-action: none;
 }
 div.container.svg {
     width: 100%;
